--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ body {font-family: Verdana, sans-serif; margin:0}
   padding: 80px;
   margin-left: 100px;
   margin-right: 100px;
-  text-align: center;
+  text-align: left;
 }
 
 /* Next & previous buttons */
